logs/dag_id=Ugoo-DAG/run_id=scheduled__2024-08-22T03:24:00+00:00/task_id=upload/attempt=1.log
[2024-08-22T23:12:56.966+0200] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Ugoo-DAG.upload scheduled__2024-08-22T03:24:00+00:00 [queued]>
[2024-08-22T23:12:56.971+0200] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Ugoo-DAG.upload scheduled__2024-08-22T03:24:00+00:00 [queued]>
[2024-08-22T23:12:56.971+0200] {taskinstance.py:2171} INFO - Starting attempt 1 of 2
[2024-08-22T23:12:56.988+0200] {taskinstance.py:2192} INFO - Executing <Task(PythonOperator): upload> on 2024-08-22 03:24:00+00:00
[2024-08-22T23:12:56.990+0200] {standard_task_runner.py:60} INFO - Started process 42771 to run task
[2024-08-22T23:12:56.993+0200] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'Ugoo-DAG', 'upload', 'scheduled__2024-08-22T03:24:00+00:00', '--job-id', '636', '--raw', '--subdir', 'DAGS_FOLDER/datadownload.py', '--cfg-path', '/tmp/tmpoft_y0gc']
[2024-08-22T23:12:56.996+0200] {standard_task_runner.py:88} INFO - Job 636: Subtask upload
[2024-08-22T23:12:57.024+0200] {task_command.py:423} INFO - Running <TaskInstance: Ugoo-DAG.upload scheduled__2024-08-22T03:24:00+00:00 [running]> on host Ugoo.
[2024-08-22T23:12:57.074+0200] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='ugoo@ezekomas.com' AIRFLOW_CTX_DAG_OWNER='Ugoo Ezekoma' AIRFLOW_CTX_DAG_ID='Ugoo-DAG' AIRFLOW_CTX_TASK_ID='upload' AIRFLOW_CTX_EXECUTION_DATE='2024-08-22T03:24:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-08-22T03:24:00+00:00'
[2024-08-22T23:12:57.346+0200] {logging_mixin.py:188} INFO - Error uploading data: syntax error at or near "NOT"
LINE 2:         CREATE TABLE IFs NOT EXISTS web_server_logs (
                                 ^
[2024-08-22T23:12:57.347+0200] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/ugoo/airflow/dags/datadownload.py", line 87, in upload
    cursor.execute("""
psycopg2.errors.SyntaxError: syntax error at or near "NOT"
LINE 2:         CREATE TABLE IFs NOT EXISTS web_server_logs (
                                 ^

[2024-08-22T23:12:57.350+0200] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Ugoo-DAG, task_id=upload, execution_date=20240822T032400, start_date=20240822T211256, end_date=20240822T211257
[2024-08-22T23:12:57.368+0200] {logging_mixin.py:188} WARNING - /home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/utils/email.py:154 RemovedInAirflow3Warning: Fetching SMTP credentials from configuration variables will be deprecated in a future release. Please set credentials using a connection instead.
[2024-08-22T23:12:57.369+0200] {configuration.py:1046} WARNING - section/key [smtp/smtp_user] not found in config
[2024-08-22T23:12:57.369+0200] {email.py:270} INFO - Email alerting: attempt 1
[2024-08-22T23:12:57.372+0200] {configuration.py:1046} WARNING - section/key [smtp/smtp_user] not found in config
[2024-08-22T23:12:57.373+0200] {email.py:270} INFO - Email alerting: attempt 1
[2024-08-22T23:12:57.375+0200] {taskinstance.py:826} ERROR - Failed to send email to: ['ugoo@ezekomas.com']
Traceback (most recent call last):
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 2335, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 2500, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 2517, in _execute_task
    return _execute_task(self, context, task_orig)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/ugoo/airflow/dags/datadownload.py", line 87, in upload
    cursor.execute("""
psycopg2.errors.SyntaxError: syntax error at or near "NOT"
LINE 2:         CREATE TABLE IFs NOT EXISTS web_server_logs (
                                 ^


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 1000, in _email_alert
    send_email(task.email, subject, html_content)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/utils/email.py", line 80, in send_email
    return backend(
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/utils/email.py", line 154, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/utils/email.py", line 272, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/utils/email.py", line 316, in _get_smtp_connection
    return smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/lib/python3.10/smtplib.py", line 255, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/lib/python3.10/smtplib.py", line 341, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/lib/python3.10/smtplib.py", line 312, in _get_socket
    return socket.create_connection((host, port), timeout,
  File "/usr/lib/python3.10/socket.py", line 845, in create_connection
    raise err
  File "/usr/lib/python3.10/socket.py", line 833, in create_connection
    sock.connect(sa)
ConnectionRefusedError: [Errno 111] Connection refused

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 824, in _handle_failure
    task_instance.email_alert(error, failure_context["task"])
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 2947, in email_alert
    _email_alert(task_instance=self, exception=exception, task=task)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 1002, in _email_alert
    send_email(task.email, subject, html_content_err)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/utils/email.py", line 80, in send_email
    return backend(
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/utils/email.py", line 154, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/utils/email.py", line 272, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/ugoo/airflow_env/lib/python3.10/site-packages/airflow/utils/email.py", line 316, in _get_smtp_connection
    return smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/lib/python3.10/smtplib.py", line 255, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/lib/python3.10/smtplib.py", line 341, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/lib/python3.10/smtplib.py", line 312, in _get_socket
    return socket.create_connection((host, port), timeout,
  File "/usr/lib/python3.10/socket.py", line 845, in create_connection
    raise err
  File "/usr/lib/python3.10/socket.py", line 833, in create_connection
    sock.connect(sa)
ConnectionRefusedError: [Errno 111] Connection refused
[2024-08-22T23:12:57.387+0200] {standard_task_runner.py:107} ERROR - Failed to execute job 636 for task upload (syntax error at or near "NOT"
LINE 2:         CREATE TABLE IFs NOT EXISTS web_server_logs (
                                 ^
; 42771)
[2024-08-22T23:12:57.407+0200] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-08-22T23:12:57.419+0200] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
